Tweaked ross fix to ‘clickability’ of scheme overview issues… scrollbars were showing up in /schemes

--- a/sites/all/themes/asb/sass/_layout.scss
+++ b/sites/all/themes/asb/sass/_layout.scss
@@ -140,9 +140,10 @@ aside.scheme-meta {
     @include box-sizing( border-box );
     max-width: 960px;
     margin: 0 auto;
-    overflow: auto;
+    // overflow: auto;
   }
   #main #block-views-scheme-overview-block-1.scheme-collection-view .view-content {
+    @include clearfix;
     overflow: visible;
   }
   .not-front.page-node #content,
